java-app-deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-sample
  template:
    metadata:
      labels:
        app: java-sample
    spec:
      containers:
        - name: java-sample-container
          image: java-sample-app:1.0
          ports:
            - containerPort: 8080
