java-app-deployments/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-sample-nodeport
spec:
  selector:
    app: java-sample
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
