java-app-deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-sample-service
spec:
  selector:
    app: java-sample
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
