java-app-deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-sample-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: java.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-sample-service
                port:
                  number: 80
